Standalone warning patch
Taken from official steam clients. thx tig.

--- a/resources/deadmaze.html
+++ b/resources/deadmaze.html
@@ -26,7 +26,7 @@
 
             setAttrs(swfemb, {
                     id: "swf2",
-                    src: "http://deadmaze.com/alpha/chargeur-deadmeat.swf",
+                    src: "chargeur-deadmeat.swf",  // http://deadmaze.com/alpha/chargeur-deadmeat.swf
                     type: "application/x-shockwave-flash",
                     name: "DeadMaze",
                     width: "100%",
