Massive code refactor to Typescript; resolving #3

--- a/resources/prefs/general.html
+++ b/resources/prefs/general.html
@@ -66,7 +66,7 @@
     <script>
         let active_btn = null;
 
-        let electronSets = window.parent.window.exports.electronSets;
+        let electronSets = window.parent.window.electron.electronSets;
 
         function setActiveBtn(x, y) {
             if (active_btn)
