--- a/resources/failure.html
+++ b/resources/failure.html
@@ -14,13 +14,10 @@
     <div id="error"></div>
 
     <script>
-        var ipc = window.ipcRenderer;
-
-        ipc.on('set-error', (event, errDesc) => {
+        window.electron.getTeError().then((errDesc) => {
             var el = document.getElementById("error");
             el.innerHTML = errDesc;
         });
-        ipc.send('should-send-error');
 
     </script>
 </body>
