Tweak prefs fonts
Use the system's default font.

--- a/resources/prefs/general.html
+++ b/resources/prefs/general.html
@@ -1,64 +1,78 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <style type="text/css">
         body {
-          margin: 0;
-          font-family: Tahoma, Arial;
-
-          user-select: none;
+            margin: 0;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+            font-size: 12px;
+            user-select: none;
         }
 
         h1 {
-          font-size: 16px;
-          font-weight: normal;
+            font-size: 14px;
+            font-weight: normal;
+            position: relative;
+            overflow: hidden;
+        }
+
+        h1:after {
+            position: absolute;
+            top: 51%;
+            overflow: hidden;
+            width: 100%;
+            height: .6px;
+            content: '\a0';
+            margin-left: 10px;
+            background-color: #c2c2c2;
         }
 
         p {
             color: #A9A9A9;
-            font-size: 12px;
+            font-size: 10px;
         }
 
         .align-container {
-          display: flex;
+            display: flex;
         }
 
         .align-btn {
-          width: 100px;
-          height: 60px;
-          border: none;
-          outline: none;
-          text-align: center;
+            width: 100px;
+            height: 60px;
+            border: none;
+            outline: none;
+            text-align: center;
         }
 
         .align-btn:hover {
-          background-color: #ebebeb;
+            background-color: #ebebeb;
         }
 
         .align-btn.active {
-          background-color: #D3D3D3;
-          font-weight: bold;
+            background-color: #D3D3D3;
+            font-weight: bold;
         }
-
     </style>
 </head>
+
 <body>
     <h1>Alignment</h1>
 
     <div class="align-container">
-      <button class="align-btn" id="align-btn-1-1" data-align="1,1">↖</button>
-      <button class="align-btn" id="align-btn-2-1" data-align="2,1">TOP</button>
-      <button class="align-btn" id="align-btn-3-1" data-align="3,1">↗</button>
-     </div>
-    <div class="align-container">
-      <button class="align-btn" id="align-btn-1-2" data-align="1,2">LEFT</button>
-      <button class="align-btn" id="align-btn-2-2" data-align="2,2">⛶</button>
-      <button class="align-btn" id="align-btn-3-2" data-align="3,2">RIGHT</button>
+        <button class="align-btn" id="align-btn-1-1" data-align="1,1">↖</button>
+        <button class="align-btn" id="align-btn-2-1" data-align="2,1">TOP</button>
+        <button class="align-btn" id="align-btn-3-1" data-align="3,1">↗</button>
     </div>
     <div class="align-container">
-      <button class="align-btn" id="align-btn-1-3" data-align="1,3">↙</button>
-      <button class="align-btn" id="align-btn-2-3" data-align="2,3">BOTTOM</button>
-      <button class="align-btn" id="align-btn-3-3" data-align="3,3">↘</button>
+        <button class="align-btn" id="align-btn-1-2" data-align="1,2">LEFT</button>
+        <button class="align-btn" id="align-btn-2-2" data-align="2,2">⛶</button>
+        <button class="align-btn" id="align-btn-3-2" data-align="3,2">RIGHT</button>
+    </div>
+    <div class="align-container">
+        <button class="align-btn" id="align-btn-1-3" data-align="1,3">↙</button>
+        <button class="align-btn" id="align-btn-2-3" data-align="2,3">BOTTOM</button>
+        <button class="align-btn" id="align-btn-3-3" data-align="3,3">↘</button>
     </div>
 
     <p>Reload for changes to apply.</p>
@@ -83,11 +97,11 @@
                 btn.addEventListener("click", () => {
                     let align = btn.dataset.align;
                     let spl = align.split(",");
-                    if (spl.length >= 2) { 
+                    if (spl.length >= 2) {
                         setActiveBtn(spl[0], spl[1]);
                         electronSets.setSync("general.align", align);
                     }
-                  });
+                });
             }
 
             let align = electronSets.getSync("general.align") || "2,2";
@@ -101,4 +115,5 @@
 
     </script>
 </body>
+
 </html>
